Bug 164641 - Wrong context menu when right clicking selection of multiple cells with misspelled words
Summary: Wrong context menu when right clicking selection of multiple cells with missp...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4 all versions
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2025-01-09 18:06 UTC by tmacalp
Modified: 2025-10-09 12:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshots showing wrong context menus (155.75 KB, image/png)
2025-01-10 16:48 UTC, tmacalp
Details

Note You need to log in before you can comment on or make changes to this bug.
Description tmacalp 2025-01-09 18:06:32 UTC
Description:
Sorry if this is a bit difficult to explain.  When you select multiple cells in the same column that have misspelled words, faulty logic is used to determine if a right click should show the standard cell context menu or a spell-checking suggestion context menu.

The context menu that is shown is based on the cursor cell, when it should be based on the cell under the mouse position.

In some cases, where the cursor cell's contents completely span the column width, this bug leaves the user unable to open a context menu for the selection.

This is minor, but it's a regression that worked properly in version 7.0.0 and before.  It must have broke somewhere between 7.0.0 and 7.5.7, which is the next version I have installed and it still affects 24.8.4.

Steps to Reproduce:
* New Calc spreadsheet
* Key data into cells: A1: aaaaaa, A2: aa, A3: aa
* Select A1:A3 with cursor in A1
* Right click in A3, just to the right of "aa"

Actual Results:
LO uses the logic of the cursor cell when determining how to handle our right click in A3.  So, even though we clicked in a blank section of A3, the right-click is treated as happening in the cursor cell A1, which would be on the misspelled word "aaaaaa".  This opens a spell-check dialog for A1's contents.

Expected Results:
Since we right clicked an empty section of cell and did not right click on a misspelled word, the standard cell context menu should appear.


Reproducible: Always


User Profile Reset: No

Additional Info:
If you right keep the selection of A1:A3, but move the cursor cell to A3, you can right click on the right side of "aaaaaa" and get a cell-context menu instead of the spell-check menu.

Also, this bug mainly affects right clicking in another cell with a misspelled word.  If you right click in a cell that does not contain a misspelled word, the normal context menu appears, as expected.

If your cell range has the cursor in a cell that does not have a spelling mistake, you can't right click on any misspelled words within your selection.  You will only get the cell context menu.
Comment 1 m_a_riosv 2025-01-10 00:20:21 UTC
Right-click outside any marked word as incorrect, but inside the cells.
Comment 2 tmacalp 2025-01-10 16:48:16 UTC
Created attachment 198473 [details]
Screenshots showing wrong context menus

I've attached a png with screenshots indicating some various states.

From left to right:
1) Cell cursor in A1, right click in A3 empty space, but context menu is based on misspelled word in A1 instead of where I clicked in A3.

2) Cell cursor in A3, right click in A1 on misspelled word. I get a cell context menu is based on empty space in A3 instead of getting spelling suggestion context menu from clicking on the misspelled word in A1.

3) Right clicking empty space in A1 not on top of any misspelled words shows the expected cell context menu.

4) Right clicking empty space in A3 not on top of any misspelled words shows the expected cell context menu.

I'm setting the bug back to UNCONFIRMED.  Please let me know if I can provide any more info.
Comment 3 m_a_riosv 2025-01-11 00:10:30 UTC
I was thinking that the problem is not being able to access the context menu. Which doesn't look like a problem even for you.
Comment 4 Justin L 2025-10-03 01:34:28 UTC
repro 26.2+

I was surprised - I thought that under a selection spellPopup would no longer be triggered, but it still is.

LO 5.3-7.?: no context menu at all when overtop of misspelling in lower cells

What OP has described started in 7.4 with
commit cf18038c66075f7a18d89e47f3a2ab1a5bf7c4fd
Author: Justin Luth on Sat Feb 19 20:22:23 2022 +0200
    tdf#81894 sc spelling: eliminate separate(inaccurate) check
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130297

I'm not going to mark "regression by", since Calc is a complete mess when it comes to spell checking / selections / context menu.
Comment 5 Commit Notification 2025-10-09 01:57:37 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/965770d61d2fe98f8b255f71d05a00cc795a29bb

tdf#164641 sc: no SpellPopup when IsCellMarked

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.